--- a/tableViewPractice/Base.lproj/Main.storyboard
+++ b/tableViewPractice/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BHV-iJ-i5n">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BHV-iJ-i5n">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -53,8 +54,21 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="BHV-iJ-i5n" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="1H7-BB-gYK"/>
+                            <constraint firstItem="BHV-iJ-i5n" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="AdC-d2-mic"/>
+                            <constraint firstItem="BHV-iJ-i5n" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="pSc-zu-nlH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="BHV-iJ-i5n" secondAttribute="trailing" id="pXE-4h-Jak"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="BHV-iJ-i5n" secondAttribute="bottom" id="vFR-dO-zQb"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Mnm-tT-ZaV"/>
+                    <navigationItem key="navigationItem" id="Mnm-tT-ZaV">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="H92-zY-lXB">
+                            <connections>
+                                <action selector="addButtonTap:" destination="BYZ-38-t0r" id="gQA-HG-IJU"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="myTableView" destination="BHV-iJ-i5n" id="1Tc-l3-X6I"/>
                     </connections>
